[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Graphics/Enemies/Bat_purple.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Enemie.gd" type="Script" id=3]
[ext_resource path="res://Shared/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]
[ext_resource path="res://Shared/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=9]
[ext_resource path="res://Shaders/WhiteColor.shader" type="Shader" id=10]
[ext_resource path="res://Enemies/Bat/BatPurple.tres" type="Resource" id=11]
[ext_resource path="res://Assets/Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Enemies/Bat/BatHurtboxCollisionShape.tres" type="Shape2D" id=13]
[ext_resource path="res://Enemies/Bat/BatHitboxCollisionShape.tres" type="Shape2D" id=14]
[ext_resource path="res://Enemies/Bat/BatBodyCollisionShape.tres" type="Shape2D" id=15]
[ext_resource path="res://Enemies/Bat/BatSoftCollisionShape.tres" type="Shape2D" id=16]

[sub_resource type="DynamicFont" id=19]
size = 8
font_data = ExtResource( 12 )

[sub_resource type="ShaderMaterial" id=17]
resource_local_to_scene = true
shader = ExtResource( 10 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=10]
radius = 63.0

[sub_resource type="Animation" id=18]
resource_name = "Fly"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 129
script = ExtResource( 3 )
enemie_resource = ExtResource( 11 )

[node name="NameLabel" type="Label" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 19 )
text = "myName"
align = 1

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_right = 18.0
margin_bottom = 3.0

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 17 )
position = Vector2( 0, -12 )
texture = ExtResource( 1 )
hframes = 5

[node name="ShadowSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
modulate = Color( 0.921569, 0.647059, 0.12549, 0.705882 )
shape = ExtResource( 15 )
__meta__ = {
"_editor_description_": "The collision shape to collide with the world."
}

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
__meta__ = {
"_editor_description_": "The collision shape the player has to hit to hurt the bat."
}

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
modulate = Color( 0.290196, 1, 0, 0.486275 )
position = Vector2( 0, -13 )
shape = ExtResource( 13 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]
__meta__ = {
"_editor_description_": "The collision shape the player has to enter to be detected and followed by the bat."
}

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 0, 0.415686 )
shape = SubResource( 10 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4
__meta__ = {
"_editor_description_": "The collision shape the bat hits the player with."
}

[node name="CollisionShape2D" parent="Hitbox" index="0"]
modulate = Color( 1, 0.188235, 0, 0.564706 )
position = Vector2( 0, -14 )
shape = ExtResource( 14 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]
__meta__ = {
"_editor_description_": "The collision shape the bats collide with each other."
}

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = ExtResource( 16 )

[node name="WanderController" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Fly"
anims/Fly = SubResource( 18 )
anims/RESET = SubResource( 16 )
anims/Start = SubResource( 13 )
anims/Stop = SubResource( 14 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
